updated comments on geotagging api

--- a/Convert PSGC to Geotags.ipynb
+++ b/Convert PSGC to Geotags.ipynb
@@ -2595,16 +2595,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pass the address to google api\n",
-    "\n",
-    "start_index, stop_index - for batch processing file\n",
-    "\n",
-    "rand_cutoff - random sampling of locations"
+    "Notes:\n",
+    "- pass the address to google api\n",
+    "- start_index, stop_index - for batch processing file\n",
+    "- rand_cutoff - random sampling of locations (percentage/probability, use all when negative)\n",
+    "- Google API has a daily query limit (2000 queries)\n",
+    "- get **key** from google developer account https://console.developers.google.com/apis/library/geocoding-backend.googleapis.com/?q=Google%20Maps%20Geocoding%20API&project=geoloc-187507\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2623,7 +2624,7 @@
     "i=0\n",
     "start_index = 0\n",
     "stop_index = 5\n",
-    "# rand_cutoff = 0.0\n",
+    "rand_cutoff = -1.0\n",
     "url = 'https://maps.googleapis.com/maps/api/geocode/json'\n",
     "import csv\n",
     "import random\n",
